--- a/backend/package.json
+++ b/backend/package.json
@@ -1,8 +1,8 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Full Stack TO-DO App",
+  "main": "server.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -10,8 +10,8 @@
     "dev": "nodemon server.js"
 
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["MERN","backend"],
+  "author": "Rajasva raj",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
