--- a/backend/package.json
+++ b/backend/package.json
@@ -8,15 +8,19 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js",
     "dev": "nodemon server.js"
-
   },
-  "keywords": ["MERN","backend"],
+  "keywords": [
+    "MERN",
+    "backend"
+  ],
   "author": "Rajasva raj",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "mongoose": "^8.8.0"
+    "mongoose": "^8.8.0",
+    "zod": "^3.23.8"
   }
 }
